--- a/style.css
+++ b/style.css
@@ -4,64 +4,23 @@ body {
   overflow: hidden;
 }
 
-h1 {
-  color: #333333;
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  background-color: #f5f5f5;
   text-align: center;
+  font-size: 1.5rem;
+  font-family: "Courier";
+  font-weight: bold;
 }
 
-button {
-  background-color: #4caf50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-button:hover {
-  transform: scale(1.25);
-  transition: transform 0.5s;
-}
-
-.vl {
-  border-left: 6px solid black;
-  height: 91%;
-  position: absolute;
-  left: 50%;
-  margin-left: -3px;
-  top: auto;
-}
-
-#flip {
-  position: absolute;
-  left: 70%;
-  margin-left: -3px;
-  top: 60%;
-}
-
-.flipimg {
-  position: absolute;
-  left: 65%;
-  margin-left: -3px;
-  top: 20%;
-}
-
-#smart {
-  position: absolute;
-  left: 20%;
-  margin-left: -3px;
-  top: 60%;
-}
-
-.smartimg {
-  position: absolute;
-  left: 15%;
-  margin-left: -3px;
-  top: 20%;
+p {
+  color: black;
+  font-family: "Courier";
+  margin: 10px 0 0 0px;
+  overflow: hidden;
 }
 
 .bgGif {
@@ -94,34 +53,15 @@ button:hover {
   width: 300px;
 }
 
-.star:hover { /* goes big first, then small */
+.star:hover {
   transform: scale(2.5);
   transition: transform 0.5s;
 }
 
-/* center buttonBGM to the top right */
 .musicOn {
   position: absolute;
   top: 0;
   right: 0;
   /* make it smaller */
   transform: scale(0.8);
-}
-
-p {
-  color: black;
-  font-family: "Courier";
-  font-size: 20px;
-  margin: 10px 0 0 10px;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 30em;
-  animation: type 4s steps(60, end);
-  display: none;
-}
-
-@keyframes type {
-  from {
-    width: 0;
-  }
 }
